## Process this file with automake to produce Makefile.in.

EXTRA_DIST =
EXTRA_DIST += 00gnulib.m4
EXTRA_DIST += absolute-header.m4
EXTRA_DIST += alloca.m4
EXTRA_DIST += arpa_inet_h.m4
EXTRA_DIST += btowc.m4
EXTRA_DIST += canonicalize.m4
EXTRA_DIST += close.m4
EXTRA_DIST += codeset.m4
EXTRA_DIST += configmake.m4
EXTRA_DIST += double-slash-root.m4
EXTRA_DIST += dup2.m4
EXTRA_DIST += eealloc.m4
EXTRA_DIST += environ.m4
EXTRA_DIST += errno_h.m4
EXTRA_DIST += extensions.m4
EXTRA_DIST += extern-inline.m4
EXTRA_DIST += fcntl-o.m4
EXTRA_DIST += fcntl_h.m4
EXTRA_DIST += fdopen.m4
EXTRA_DIST += fnmatch.m4
EXTRA_DIST += fstat.m4
EXTRA_DIST += ftruncate.m4
EXTRA_DIST += getcwd.m4
EXTRA_DIST += getdtablesize.m4
EXTRA_DIST += getpagesize.m4
EXTRA_DIST += gettimeofday.m4
EXTRA_DIST += glibc21.m4
EXTRA_DIST += gnulib-common.m4
EXTRA_DIST += include_next.m4
EXTRA_DIST += inet_pton.m4
EXTRA_DIST += intlmacosx.m4
EXTRA_DIST += inttypes-pri.m4
EXTRA_DIST += inttypes.m4
EXTRA_DIST += ioctl.m4
EXTRA_DIST += langinfo_h.m4
EXTRA_DIST += largefile.m4
EXTRA_DIST += lcmessage.m4
EXTRA_DIST += lib-ld.m4
EXTRA_DIST += lib-link.m4
EXTRA_DIST += lib-prefix.m4
EXTRA_DIST += localcharset.m4
EXTRA_DIST += locale-fr.m4
EXTRA_DIST += locale-ja.m4
EXTRA_DIST += locale-tr.m4
EXTRA_DIST += locale-zh.m4
EXTRA_DIST += locale_h.m4
EXTRA_DIST += localeconv.m4
EXTRA_DIST += localename.m4
EXTRA_DIST += lock.m4
EXTRA_DIST += longlong.m4
EXTRA_DIST += lstat.m4
EXTRA_DIST += malloc.m4
EXTRA_DIST += malloca.m4
EXTRA_DIST += mbrtowc.m4
EXTRA_DIST += mbsinit.m4
EXTRA_DIST += mbsrtowcs.m4
EXTRA_DIST += mbstate_t.m4
EXTRA_DIST += mbtowc.m4
EXTRA_DIST += memchr.m4
EXTRA_DIST += mmap-anon.m4
EXTRA_DIST += mode_t.m4
EXTRA_DIST += msvc-inval.m4
EXTRA_DIST += msvc-nothrow.m4
EXTRA_DIST += multiarch.m4
EXTRA_DIST += nanosleep.m4
EXTRA_DIST += net_if_h.m4
EXTRA_DIST += netdb_h.m4
EXTRA_DIST += netinet_in_h.m4
EXTRA_DIST += nl_langinfo.m4
EXTRA_DIST += nocrash.m4
EXTRA_DIST += off_t.m4
EXTRA_DIST += onceonly.m4
EXTRA_DIST += open.m4
EXTRA_DIST += pathmax.m4
EXTRA_DIST += perror.m4
EXTRA_DIST += pipe.m4
EXTRA_DIST += poll.m4
EXTRA_DIST += poll_h.m4
EXTRA_DIST += putenv.m4
EXTRA_DIST += raise.m4
EXTRA_DIST += readlink.m4
EXTRA_DIST += regex.m4
EXTRA_DIST += select.m4
EXTRA_DIST += setenv.m4
EXTRA_DIST += setlocale.m4
EXTRA_DIST += sigaction.m4
EXTRA_DIST += signal_h.m4
EXTRA_DIST += signalblocking.m4
EXTRA_DIST += sleep.m4
EXTRA_DIST += socketlib.m4
EXTRA_DIST += sockets.m4
EXTRA_DIST += socklen.m4
EXTRA_DIST += sockpfaf.m4
EXTRA_DIST += ssize_t.m4
EXTRA_DIST += stat.m4
EXTRA_DIST += stdalign.m4
EXTRA_DIST += stdbool.m4
EXTRA_DIST += stddef_h.m4
EXTRA_DIST += stdint.m4
EXTRA_DIST += stdio_h.m4
EXTRA_DIST += stdlib_h.m4
EXTRA_DIST += strerror.m4
EXTRA_DIST += strerror_r.m4
EXTRA_DIST += string_h.m4
EXTRA_DIST += strtok_r.m4
EXTRA_DIST += symlink.m4
EXTRA_DIST += sys_ioctl_h.m4
EXTRA_DIST += sys_resource_h.m4
EXTRA_DIST += sys_select_h.m4
EXTRA_DIST += sys_socket_h.m4
EXTRA_DIST += sys_stat_h.m4
EXTRA_DIST += sys_time_h.m4
EXTRA_DIST += sys_types_h.m4
EXTRA_DIST += sys_uio_h.m4
EXTRA_DIST += sys_wait_h.m4
EXTRA_DIST += thread.m4
EXTRA_DIST += threadlib.m4
EXTRA_DIST += time_h.m4
EXTRA_DIST += time_r.m4
EXTRA_DIST += unistd_h.m4
EXTRA_DIST += warn-on-use.m4
EXTRA_DIST += wchar_h.m4
EXTRA_DIST += wchar_t.m4
EXTRA_DIST += wcrtomb.m4
EXTRA_DIST += wctob.m4
EXTRA_DIST += wctomb.m4
EXTRA_DIST += wctype_h.m4
EXTRA_DIST += wint_t.m4
EXTRA_DIST += yield.m4
